2025-11-09T02:02:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19201788876 # 803
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-09
* notice: last 14d: unq all: 4 832
* notice: prev accum: outdated-unq outdated-all / unq all: 2912 274220 / 2931 274977
* notice: next accum: outdated-unq outdated-all / unq all: 2914 274263 / 2932 275098
* notice: prev exec diff / last date diff / accum: unq all: +1 +121 -0 -3 / +1 +19 -0 -0 / 1 19
* notice: removed / changed dates: [2025-10-25] / [2025-10-26 2025-11-08 2025-11-09]

2025-11-08T01:52:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19186143970 # 802
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-08
* notice: last 14d: unq all: 5 754
* notice: prev accum: outdated-unq outdated-all / unq all: 2911 274181 / 2930 274854
* notice: next accum: outdated-unq outdated-all / unq all: 2912 274220 / 2931 274977
* notice: prev exec diff / last date diff / accum: unq all: +1 +123 -0 -3 / +1 +23 -0 -0 / 1 23
* notice: removed / changed dates: [2025-10-24] / [2025-10-25 2025-11-07 2025-11-08]

2025-11-07T01:58:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19155741662 # 801
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-07
* notice: last 14d: unq all: 5 670
* notice: prev accum: outdated-unq outdated-all / unq all: 2909 274144 / 2929 274733
* notice: next accum: outdated-unq outdated-all / unq all: 2911 274181 / 2930 274854
* notice: prev exec diff / last date diff / accum: unq all: +1 +121 -0 -3 / +1 +23 -0 -0 / 1 23
* notice: removed / changed dates: [2025-10-23] / [2025-10-24 2025-11-06 2025-11-07]

2025-11-06T01:59:45Z: