@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-11-06T01:59:45Z",
-  "count" : 38,
-  "count_minmax" : [ 38, 38 ],
-  "count_decinc" : [ -0, +38 ],
+  "timestamp" : "2025-11-10T02:04:22Z",
+  "count" : 35,
+  "count_minmax" : [ 35, 38 ],
+  "count_decinc" : [ -3, +38 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
