@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-11-09T02:02:52Z",
-  "count_outdated" : 274263,
-  "uniques_outdated" : 2914,
-  "count" : 275098,
-  "uniques" : 2932,
+  "timestamp" : "2025-11-10T02:04:22Z",
+  "count_outdated" : 274305,
+  "uniques_outdated" : 2915,
+  "count" : 275222,
+  "uniques" : 2933,
   "clones" : [
     {
-      "timestamp": "2025-10-26T00:00:00Z",
-      "count": 39,
-      "count_minmax": [ 39, 42 ],
-      "count_decinc": [ 3, 42 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2025-10-27T00:00:00Z",
-      "count": 38,
-      "count_minmax": [ 38, 38 ],
-      "count_decinc": [ 0, 38 ],
+      "count": 35,
+      "count_minmax": [ 35, 38 ],
+      "count_decinc": [ 3, 38 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,6 +124,15 @@
     },
     {
       "timestamp": "2025-11-09T00:00:00Z",
+      "count": 124,
+      "count_minmax": [ 19, 124 ],
+      "count_decinc": [ 0, 124 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-10T00:00:00Z",
       "count": 19,
       "count_minmax": [ 19, 19 ],
       "count_decinc": [ 0, 19 ],
