@@ -1,15 +1,10 @@
 {
-  "count": 832,
+  "count": 914,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-10-26T00:00:00Z",
-      "count": 39,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-10-27T00:00:00Z",
-      "count": 38,
+      "count": 35,
       "uniques": 2
     },
     {
@@ -74,6 +69,11 @@
     },
     {
       "timestamp": "2025-11-09T00:00:00Z",
+      "count": 124,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-11-10T00:00:00Z",
       "count": 19,
       "uniques": 1
     }
